# quinoa

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  2  CMakeLists.txt  LICENSE  README.md  build_includes  dump  helloworld  main.c  quinoa_app  test.c  test.ll  thinkbox.txt
.cache/clangd/index/: GenMacro.h.13B3A23332C9148B.idx  TokenDef.h.FC0E30DD302C8C8E.idx  advanced_operators.hh.7EC0E512CCED0525.idx  allocating_expr.hh.050166117B1773A4.idx  array_validator.hh.EA1EEAAA4EA6D4A9.idx  ast.hh.8BA852E46E6B28C7.idx  call_qualifier.hh.F1BD2C983A8AE4D4.idx  clarg_parser.hh.AE57BDA8CDB56885.idx  codegen.cc.2766D7F61ACACEB6.idx  codegen.hh.40836F859A31F82A.idx  compilation_unit.hh.D7FDED3DF8D5A7A9.idx  compiler.cc.37B5D3A148DB17A7.idx  compiler.h.6649CF93269659BF.idx  compositor_resolver.hh.B8462407B34087CA.idx  constant.hh.FAC09070DD1F236F.idx  container.hh.629A54070AE8219C.idx  container_member.hh.FB920C5E6D38D74C.idx  control_flow.hh.3A6FDAB53D839C9D.idx  entrypoint_resolver.hh.0DAE2D7AFAD032BD.idx  error.cc.64C5218995147038.idx  error.h.1BE7818DAC4D4293.idx  expression_parser.cc.1E5B36DF2D9E3961.idx  expression_parser.hh.9148D0F952A5ABA4.idx  finalization.hh.11D8B1244A3346DB.idx  import_handler.hh.8BA2E91F2CDF475B.idx  include.h.39FFCA25D43C118B.idx  include.hh.CA0E285CA5E04ECE.idx  intrinsic.cc.0AE1BF5EC122CCA9.idx  intrinsic.hh.5E9C008094706612.idx  lexer.cc.26BFA725A333B90E.idx  lexer.h.F0778D025F615010.idx  link_extern.hh.A39C33A23CF34A9B.idx  list.cc.680E091C02780672.idx  list.h.6542FA86913D4767.idx  literal.hh.EFF2DEB41658A071.idx  llvm_utils.cc.546864EE13E9657F.idx  llvm_utils.h.E9BCF07E041D79A0.idx  logger.cc.AEF61531C7EC3E48.idx  logger.h.88F85BD799CC8C3E.idx  main.cc.6373562E291E8740.idx  (+26 more)
.github/workflows/: codeql.yml
cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  quinoa
data/: syntax.defn
dev/: test.qn
docs/: About.md
examples/: HelloWorld.qn  Structs.qn  chia.toml  test.qn
libq/: assertions.qn  fs.qn  io.qn  math.qn  memory.qn  qpk.json  strconv.qn  string.qn  syscall.qn  vec.qn
libq/lang/: assertions.qn  instantiable.qn  primitives.qn
libq/lang/internal/: error.qn
libq/lang/primitives/: struct.qn
libq/native/: struct.qn
libq/net/: io.qn  tcp.qn
libq/sys/: file.qn  posix.qn
libq/util/: cstr.qn
old/AST_old/: ast.cc  identifier.hh  module_member.hh
old/Codegen/: codegen.cc
old/Parser_old/: parser.cc  parser.h  util.hh
old/Processor/: processor.cc  processor.h
quinoa/: GenMacro.h  main.cc
quinoa/compiler/: compiler.cc  compiler.h  compiler.hh  llvm_globals.cc  llvm_globals.h
quinoa/core/: compiler.cc  compiler.h  llvm_globals.cc  llvm_globals.h  llvm_utils.cc  llvm_utils.h
quinoa/lib/: clarg_parser.cc  clarg_parser.hh  error.cc  error.h  list.cc  list.h  logger.cc  logger.h  vec.hh
scripts/: compile.sh  generateTokenDefinitions.py
tests/: README.md  generate_tests.py
tests/compiler_regression/: README.md  generate_tests.py
tests/src/: assignment.tq  initialization.tq
tools/tree-sitter-quinoa/: .gitignore  Cargo.toml  binding.gyp  expr.js  grammar.js  package.json  statement.js  type.js
(+177 files in other folders)
